# duckdb-dcfinder

./: CLAUDE.md  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
src/: dcfinder_extension.cpp
src/dcfinder/: cover_search.cpp  dc_parser.cpp  error_cells.cpp  evidence.cpp  pli.cpp  predicate.cpp  profiler.cpp  repairs.cpp  soundness.cpp  violations.cpp
src/include/: dcfinder_extension.hpp
src/include/dcfinder/: cover_search.hpp  dc_parser.hpp  error_cells.hpp  evidence.hpp  pli.hpp  predicate.hpp  profiler.hpp  repairs.hpp  soundness.hpp  violations.hpp
test/sql/: dcfinder.test
